--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,6 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+FallInDeep/Assets/Animation/drobovik_0.anim
+FallInDeep/Assets/Animation/drobovik_1.anim
+FallInDeep/Assets/Scenes/SampleScene.unity
